--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: Papyrus, fantasy;
-
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -37,6 +36,7 @@ body {
     padding: 20px;
 
 
+
 }
 
 .results-container {
@@ -56,11 +56,47 @@ body {
     justify-content: center;
     align-items: center;
     gap: 25px;
+    margin-bottom:50px;
 
 
 }
 
+.footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: auto;
+    border-style: solid;
+    border-color: #E4F1FE;
+    background-color: #22313F;;
 
+
+}
+
+#references {
+    justify-content: space-between;
+    display: flex;
+    gap: 40px;
+    flex: 1;
+    padding: 20px;
+
+
+}
+
+#reference-text{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+   padding-top: 20px;
+}
+
+a{
+    color:#E4F1FE ;
+    text-decoration: none;
+}
+ul{
+    list-style: none;
+
+}
 button {
 
     padding: 2px;
